[tool.poetry]
name = "ork_recamp"
version = "0.2.15"
description = "RECAMP (Record Examination and Comparison for Active Membership and dues Payments)"
authors = ["Hielyr <7991705+Hielyr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
